--- a/Tests/Schemes/iOS Tests.xcscheme
+++ b/Tests/Schemes/iOS Tests.xcscheme
@@ -5,6 +5,22 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
+      <BuildActionEntries>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "25A0134717DBC212006C2BD6"
+               BuildableName = "iOS Tests.xctest"
+               BlueprintName = "iOS Tests"
+               ReferencedContainer = "container:Tests/ISO8601DateFormatterValueTransformerTests.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+      </BuildActionEntries>
    </BuildAction>
    <TestAction
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
@@ -19,7 +35,7 @@
                BlueprintIdentifier = "25A0134717DBC212006C2BD6"
                BuildableName = "iOS Tests.xctest"
                BlueprintName = "iOS Tests"
-               ReferencedContainer = "container:ISO8601DateFormatterValueTransformerTests.xcodeproj">
+               ReferencedContainer = "container:Tests/ISO8601DateFormatterValueTransformerTests.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
